added multiple html pages for homepage

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brown Bear Designs</title>
+    <title>About</title>
 
     <!-- Bootstrap css CDN -->
 
@@ -19,7 +19,6 @@
 <body>
 
     <!-- Header section to be used on all pages -->
-
     <div class="container">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
           <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
