--- a/contact.html
+++ b/contact.html
@@ -27,14 +27,16 @@
           </a>
     
           <ul class="nav nav-pills">
-            <li class="nav-item"><a href="/index.html" class="nav-link active" aria-current="page">Home</a></li>
+            <li class="nav-item"><a href="/index.html" class="nav-link" aria-current="page">Home</a></li>
             <li class="nav-item"><a href="/blog.html" class="nav-link">Blog</a></li>
-            <li class="nav-item"><a href="/contact.html" class="nav-link">Contact</a></li>
+            <li class="nav-item"><a href="/contact.html" class="nav-link active">Contact</a></li>
             <li class="nav-item"><a href="/about.html" class="nav-link">About</a></li>
             <li class="nav-item"><a href="/faq.html" class="nav-link">FAQs</a></li>
           </ul>
         </header>
       </div>
+
+      
 
       <!-- Footer to be added to each page -->
 
