updated multiple html pages for full site and added images

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
           <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
             <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-            <span class="fs-4">Simple header</span>
+            <span class="fs-4"><img src="/images/resized png for website.png" width="auto" height="50" alt=""></span>
           </a>
     
           <ul class="nav nav-pills">
@@ -31,9 +31,34 @@
             <li class="nav-item"><a href="/blog.html" class="nav-link">Blog</a></li>
             <li class="nav-item"><a href="/contact.html" class="nav-link">Contact</a></li>
             <li class="nav-item"><a href="/about.html" class="nav-link active">About</a></li>
+            <li class="nav-item"><a href="/previous-work.html" class="nav-link">Previous Work</a></li>
             <li class="nav-item"><a href="/faq.html" class="nav-link">FAQs</a></li>
           </ul>
         </header>
+      </div>
+
+      <!-- Hero section for this about page -->
+
+      <div class="px-4 pt-5 my-5 text-center border-bottom">
+        <h1 class="display-4 fw-bold">About Brown Bear Design</h1>
+        <div class="col-lg-6 mx-auto">
+          <p class="lead mb-4">Fast responive websites is what we do. Let your customers find you on their phones, tables, desktops. Always be a couple clicks away from your next customer query. Enquire today about how we can get your story online and engrained in your customers memories.</p>
+          <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+            <!-- Original button link -->
+            <!-- <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Contact Us</button> -->
+
+            <a href="/contact.html" class="btn btn-primary btn-lg px-4 me-sm-3" role="button">Contact us</a>
+            <a href="/contact.html" class="btn btn-outline-secondary btn-lg px-4" role="button">Previous work</a>
+
+            <!-- Original button Link -->
+            <!-- <button type="button" class="btn btn-outline-secondary btn-lg px-4">Previous Work</button> -->
+          </div>
+        </div>
+        <div class="overflow-hidden" style="max-height: 30vh;">
+          <div class="container px-5">
+            <img src="/images/resized.jpeg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
+          </div>
+        </div>
       </div>
 
       <!-- Footer to be added to each page -->
@@ -44,11 +69,12 @@
             <div class="col-6 col-md-2 mb-3">
               <h5>Section</h5>
               <ul class="nav flex-column">
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Blog</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Contact</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+                <li class="nav-item mb-2"><a href="/index.html" class="nav-link p-0 text-muted">Home</a></li>
+                <li class="nav-item mb-2"><a href="/blog.html" class="nav-link p-0 text-muted">Blog</a></li>
+                <li class="nav-item mb-2"><a href="/contact.html" class="nav-link p-0 text-muted">Contact</a></li>
+                <li class="nav-item mb-2"><a href="/about.html" class="nav-link p-0 text-muted">About</a></li>
+                <li class="nav-item mb-2"><a href="/previous-work.html" class="nav-link p-0 text-muted">Previous Work</a></li>
+                <li class="nav-item mb-2"><a href="/faq.html" class="nav-link p-0 text-muted">FAQs</a></li>
               </ul>
             </div>
       
