added thank you page and further inputs on index.html page

--- a/thank-you.html
+++ b/thank-you.html
@@ -52,8 +52,8 @@
             <img src="/brown_bear_designs/images/resized.jpeg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
           </div>
           <div class="col-lg-6">
-            <h1 class="display-5 fw-bold lh-1 mb-3">Get a brand new website, today!!</h1>
-            <p class="lead">Quickly design and customize responsive mobile-first sites with modern design, using the world’s most popular tools, so your customers can find you in just a few clicks</p>
+            <h1 class="display-5 fw-bold lh-1 mb-3">Thank you for submitting the form</h1>
+            <p class="lead">Check your email for the best email you'll get in the next 30 seconds.</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
               <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Previous work</button>
               <button type="button" class="btn btn-outline-secondary btn-lg px-4">Contact us today</button>
@@ -86,10 +86,8 @@
                 <h5>Subscribe to our newsletter</h5>
                 <p>Monthly digest of what's new and exciting from us.</p>
                 <div class="d-flex flex-column flex-sm-row w-100 gap-2">
-                  <label for="newsletter1" class="visually-hidden">Email address</label>
-                  <input type="hidden" name="_subject" value="New email Woohoo!">
-                  <input id="newsletter1" type="email" class="form-control" name="email" placeholder="Email address" required>
-                  <input type="hidden" name="_next" value="https://donnol87.github.io/brown_bear_designs/thank-you.html">
+                  <label for="newsletter1 validationCustom01" class="visually-hidden">Email address</label>
+                  <input id="newsletter1" type="email" class="form-control" placeholder="Email address" required>
                   <button class="btn btn-primary" type="button">Subscribe</button>
                 </div>
               </form>
