--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                   <input type="hidden" name="_subject" value="New email Woohoo!">
                   <input id="newsletter1" type="email" class="form-control" name="email" placeholder="Email address" required>
                   <input type="hidden" name="_next" value="https://donnol87.github.io/brown_bear_designs/thank-you.html">
+                  <input type="submit" name="submit">
                   <button class="btn btn-primary" type="button">Subscribe</button>
                 </div>
               </form>
