updated thank you page to remove active class from header

--- a/thank-you.html
+++ b/thank-you.html
@@ -30,7 +30,7 @@
           </a>
     
           <ul class="nav nav-pills">
-            <li class="nav-item"><a href="/brown_bear_designs/index.html" class="nav-link active" aria-current="page">Home</a></li>
+            <li class="nav-item"><a href="/brown_bear_designs/index.html" class="nav-link" aria-current="page">Home</a></li>
             <li class="nav-item"><a href="/brown_bear_designs/blog.html" class="nav-link">Blog</a></li>
             <li class="nav-item"><a href="/brown_bear_designs/contact.html" class="nav-link">Contact</a></li>
             <li class="nav-item"><a href="/brown_bear_designs/about.html" class="nav-link">About</a></li>
