added in extra functionality for the form submission button

--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
                   <input id="newsletter1" type="email" class="form-control" name="email" placeholder="Email address" required>
                   <input type="hidden" name="_next" value="https://donnol87.github.io/brown_bear_designs/thank-you.html">
                   <input type="submit" name="Subscribe" class="btn btn-primary">
+                  <input type="text" name="_honey" style="display:none">
+                  <input type="hidden" name="_autoresponse" value="Thanks for your message! Will get back to you soon. Donn">
                   <!-- <button class="btn btn-primary" type="button">Subscribe</button> -->
                 </div>
               </form>
