--- a/contact.html
+++ b/contact.html
@@ -84,22 +84,43 @@
 
         <!-- The col class is what moved this down to the next line or kept it in place -->
 
-        <div class="col-lg-6">
-          <form>
-            <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+<!-- Old contact form that's been removed -->
+
+            <!-- <div class="col-lg-6">
+              <form>
+                <div class="form-group">
+                  <label for="exampleInputEmail1">Email address</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                </div>
+                <div class="form-group">
+                  <label for="exampleInputPassword1">Password</label>
+                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                </div>
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                  <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
+            </div> -->
+
+            <!-- New contact form that's the same as the newsletter in the footer -->
+
+        <div class="col-md-5 offset-md-1 mb-3">
+          <form action="https://formsubmit.co/donn@donnolochlainn.com" method="POST">
+            <h5>We'd love to hear from you</h5>
+            <p>Get in touch today and tell us about your project</p>
+            <div class="d-flex flex-column flex-sm-row w-100 gap-2">
+              <label for="newsletter1" class="visually-hidden">Email address</label>
+              <input type="hidden" name="_subject" value="New email Woohoo!">
+              <input id="newsletter1" type="email" class="form-control" name="email" placeholder="Email address" required>
+              <input type="hidden" name="_next" value="https://donnol87.github.io/brown_bear_designs/thank-you.html">
+              <input type="submit" name="Subscribe" class="btn btn-primary">
+              <input type="text" name="_honey" style="display:none">
+              <input type="hidden" name="_autoresponse" value="Thanks for your message! Will get back to you soon. Donn">
+              <!-- <button class="btn btn-primary" type="button">Subscribe</button> -->
             </div>
-            <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-            </div>
-            <div class="form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
           </form>
         </div>
         <div class="col-lg-6">
